# cedra

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.github/workflows/: ci.yaml
cdr/: CMakeLists.txt  ceres_tests.cc
cdr/base/: CMakeLists.txt  aligned_alloc.h  check.h  generator.h  hardware_interference_size.h
cdr/base/internal/: check_impl.cc  check_impl.h  export.h  generator_impl.h  generator_impl_bench.cc
cdr/calendar/: CMakeLists.txt  date.cc  date.h  date_test.cc  freq.h  holiday_storage.cc  holiday_storage.h  holiday_storage_test.cc
cdr/calendar/internal/: export.h
cdr/config/: exports.h
cdr/curve/: CMakeLists.txt  curve.cc  curve.h  curve_test.cc
cdr/curve/internal/: export.h
cdr/curve/interpolation/: linear.cc  linear.h
cdr/fx/: CMakeLists.txt  fx.h
cdr/fx/internal/: export.h
cdr/market/: CMakeLists.txt  context.cc  context.h  context_tests.cc
cdr/market/internal/: export.h
cdr/math/: CMakeLists.txt
cdr/math/distributions/: normal.h  normal_tests.cc
cdr/math/internal/: export.h
cdr/math/newton_raphson/: newton_raphson.h  newton_raphson_tests.cc
cdr/model/: CMakeLists.txt  model.cc  model.h  model_test.cc
cdr/model/internal/: export.h
cdr/options/: CMakeLists.txt  contract.cc  contract.h  diffprog_pricing.h  diffprog_pricing_tests.cc  greeks.h  helpers.h  options_tests.cc  volatility.cc  volatility.h  volatility_bench.cc  volatility_tests.cc
cdr/options/internal/: export.h
cdr/options/interpolation/: concept.h  cubic_spline.cc  cubic_spline.h  cubic_spline_tests.cc  flat_forward.cc  flat_forward.h  lerp.cc  lerp.h  quadratic_spline.cc  quadratic_spline.h  sabr.cc  sabr.h  sabr_tests.cc
cdr/swaps/: CMakeLists.txt  irs.cc  irs.h  swaps_tests.cc
cdr/swaps/internal/: export.h
cdr/types/: CMakeLists.txt  concepts.h  errors.h  expect.h  expect_tests.cc  floats.h  integers.h  jurisdiction.h  keys.h  options.h  percent.cc  percent.h  types.h
cdr/types/internal/: export.h
cmake/: CdrConfig.cmake.in  CdrHelpers.cmake  CdrSanitizers.cmake  PrepareDependencies.cmake
doc/: development_rus.md
